# fhir-sdk

crates/fhir-model/: Cargo.toml
crates/fhir-model/src/: date_time.rs
crates/fhir-model/src/r4b/: mod.rs
crates/fhir-model/src/r4b/codes/: generated.rs
crates/fhir-model/src/r4b/resources/: mod.rs
crates/fhir-model/src/r4b/types/: generated.rs  mod.rs
crates/fhir-model/src/r5/: mod.rs
crates/fhir-model/src/r5/codes/: generated.rs
crates/fhir-model/src/r5/params/: generated.rs
crates/fhir-model/src/r5/resources/: mod.rs
crates/fhir-model/src/r5/types/: generated.rs  mod.rs
crates/fhir-model/src/stu3/: mod.rs
crates/fhir-model/src/stu3/codes/: generated.rs
crates/fhir-model/src/stu3/resources/: mod.rs
crates/fhir-model/src/stu3/types/: generated.rs  mod.rs
crates/fhir-sdk/: Cargo.toml
crates/fhir-sdk/src/client/: mod.rs
crates/generate/: Cargo.toml
crates/generate/definitions/r4b/: profiles-types.json
crates/generate/definitions/r5/: profiles-types.json
crates/generate/definitions/stu3/: profiles-types.json
crates/generate/src/: lib.rs  main.rs
crates/generate/src/generate/: gen_codes.rs  gen_params.rs  gen_traits.rs  gen_types.rs  mod.rs
crates/generate/src/model/: mod.rs  params.rs  structures.rs
crates/generate/src/parse/: mod.rs  params.rs
crates/generate/src/parse/r4b/: codes.rs  mod.rs  structures.rs
crates/generate/src/parse/r5/: codes.rs  mod.rs  structures.rs
crates/generate/src/parse/stu3/: codes.rs  mod.rs  structures.rs
