[package]
authors = ["Flix <felix.dommes@rwth-aachen.de>"]
categories = ["data-structures", "parser-implementations", "web-programming"]
description = "FHIR Software Development Kit. Library for interfacing with FHIR."
documentation = "https://docs.rs/fhir-sdk"
edition = "2021"
homepage = "https://github.com/FlixCoder/fhir-sdk"
keywords = ["FHIR", "JSON", "types"]
license = "MIT"
name = "fhir-sdk"
readme = "README.md"
repository = "https://github.com/FlixCoder/fhir-sdk"
version = "0.9.0"

[lints]
workspace = true

[features]
default = ["builders", "client", "docs", "r5"]
client = [
  "builders",
  "dep:async-trait",
  "dep:futures",
  "dep:ordered-stream",
  "dep:pin-project-lite",
  "dep:reqwest",
  "dep:serde",
  "dep:serde_json",
  "dep:thiserror",
  "dep:tokio-retry",
  "dep:tracing",
  "dep:uuid",
  "fhir-model/search-params",
]
builders = ["fhir-model/builders"]
stu3 = ["fhir-model/stu3"]
r4b = ["fhir-model/r4b"]
r5 = ["fhir-model/r5"]
docs = []

[dependencies]
async-trait = { version = "0.1", optional = true }
fhir-model = { path = "../fhir-model", version = "0.8.0", default-features = false }
futures = { version = "0.3", optional = true }
ordered-stream = { git = "https://github.com/formelio/ordered-stream.git", branch = "master", optional = true }
pin-project-lite = { version = "0.2", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
tokio-retry = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
eyre = "0.6.8"
once_cell = "1.18.0"
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[package.metadata.docs.rs]
features = ["builders", "client", "docs", "r5"]
no-default-features = true
